snapshots/serde/serde_derive_internals/test__build.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 15,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 3,
            end_line: 15,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 1,
                    structural_sum: 1,
                    structural_min: 1,
                    structural_max: 1,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: Some(
                            228,
                        ),
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.000,
                    cyclomatic: 2.000,
                    n: 1,
                    cyclomatic_max: 2.000,
                    cyclomatic_min: 2.000,
                },
                halstead: Stats {
                    u_operators: 9,
                    operators: 21,
                    u_operands: 9,
                    operands: 12,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 2,
                        end: 14,
                        unit: fal,
                        sloc_min: 13,
                        sloc_max: 13,
                    },
                    ploc: Ploc {
                        lines: {
                            13,
                            10,
                            4,
                            14,
                            11,
                            2,
                            12,
                            3,
                        },
                        ploc_min: 8,
                        ploc_max: 8,
                    },
                    cloc: Cloc {
                        only_comment_lines: 4,
                        code_comment_lines: 0,
                        comment_line_end: Some(
                            9,
                        ),
                        cloc_min: 4,
                        cloc_max: 4,
                    },
                    lloc: Lloc {
                        logical_lines: 5,
                        lloc_min: 5,
                        lloc_max: 5,
                    },
                    space_count: 1,
                    blank_min: 1,
                    blank_max: 1,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 33.000,
                    halstead_vocabulary: 18.000,
                    halstead_volume: 137.608,
                    cyclomatic: 2.000,
                    sloc: 13.000,
                    comments_percentage: 0.308,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 1,
            structural_min: 0,
            structural_max: 1,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.000,
            cyclomatic: 1.000,
            n: 2,
            cyclomatic_max: 2.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 9,
            operators: 22,
            u_operands: 11,
            operands: 15,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 15,
                unit: tru,
                sloc_min: 13,
                sloc_max: 13,
            },
            ploc: Ploc {
                lines: {
                    0,
                    13,
                    10,
                    4,
                    14,
                    11,
                    2,
                    12,
                    3,
                },
                ploc_min: 8,
                ploc_max: 8,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: None,
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 5,
                lloc_min: 5,
                lloc_max: 5,
            },
            space_count: 2,
            blank_min: 1,
            blank_max: 1,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 37.000,
            halstead_vocabulary: 20.000,
            halstead_volume: 159.911,
            cyclomatic: 3.000,
            sloc: 15.000,
            comments_percentage: 0.267,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
