snapshots/serde/serde_derive_internals/test__lib.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 51,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 1.000,
            cyclomatic: 1.000,
            n: 1,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 5,
            operators: 24,
            u_operands: 45,
            operands: 77,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 51,
                unit: tru,
                sloc_min: 51,
                sloc_max: 51,
            },
            ploc: Ploc {
                lines: {
                    0,
                    46,
                    43,
                    40,
                    37,
                    34,
                    31,
                    28,
                    25,
                    22,
                    13,
                    10,
                    7,
                    4,
                    1,
                    50,
                    47,
                    44,
                    41,
                    38,
                    35,
                    32,
                    29,
                    26,
                    23,
                    20,
                    17,
                    14,
                    11,
                    48,
                    36,
                    33,
                    30,
                    24,
                    21,
                    18,
                    15,
                    12,
                    9,
                    6,
                    3,
                },
                ploc_min: 41,
                ploc_max: 41,
            },
            cloc: Cloc {
                only_comment_lines: 6,
                code_comment_lines: 0,
                comment_line_end: Some(
                    27,
                ),
                cloc_min: 6,
                cloc_max: 6,
            },
            lloc: Lloc {
                logical_lines: 0,
                lloc_min: 0,
                lloc_max: 0,
            },
            space_count: 1,
            blank_min: 4,
            blank_max: 4,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 101.000,
            halstead_vocabulary: 50.000,
            halstead_volume: 570.029,
            cyclomatic: 1.000,
            sloc: 51.000,
            comments_percentage: 0.118,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
